--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -20,9 +20,10 @@
         }
 
         .container {
-            text-align: center;
             width: 90%;
             max-width: 1200px;
+            text-align: center;
+            padding: 20px;
         }
 
         h1 {
@@ -43,45 +44,98 @@
         }
 
         .panel {
-            background-color: #1d1d1d;
-            border-radius: 12px;
-            padding: 25px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .panel:hover {
-            transform: scale(1.02);
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+            padding: 20px;
         }
 
         .time-box {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            background: #222;
+            border-radius: 15px;
             padding: 15px;
-            font-size: 22px;
-            border-radius: 8px;
-            background: #282828;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
-            transition: all 0.3s ease;
-            margin: 10px 0;
+            width: 220px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
         }
 
         .time-box:hover {
-            background: #03a9f4;
-            color: #fff;
-            transform: scale(1.05);
+            transform: translateY(-5px);
+            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
         }
 
-        .highlight {
-            background: linear-gradient(90deg, #03a9f4, #00e676);
+        .time-box::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.3);
+            border-radius: 15px;
+            z-index: -1;
+        }
+
+        .time-box .flag {
+            font-size: 30px;
+        }
+
+        .time-box h2 {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+
+        .time-box a {
+            font-size: 18px;
+            color: #fff;
+            text-decoration: none;
             font-weight: bold;
-            box-shadow: 0 4px 10px rgba(3, 169, 244, 0.4);
+            transition: color 0.3s;
+        }
+
+        .time-box a:hover {
+            color: #03a9f4;
+        }
+
+        .time-box .time {
+            font-size: 32px;
+            font-weight: 700;
+            margin-top: 15px;
+            letter-spacing: 1px;
+        }
+
+        .time-box .sun-info {
+            font-size: 14px;
+            margin-top: 15px;
+        }
+
+        /* Colores específicos por zona */
+        #San-Jose-del-Cabo {
+            background: linear-gradient(90deg, #f44336, #ff9800);
+        }
+
+        #Puerto-Vallarta {
+            background: linear-gradient(90deg, #3f51b5, #2196f3);
+        }
+
+        #Punta-Cana {
+            background: linear-gradient(90deg, #4caf50, #8bc34a);
+        }
+
+        #Cancun {
+            background: linear-gradient(90deg, #00bcd4, #009688);
         }
 
         @media (max-width: 768px) {
-            h1 { font-size: 28px; }
-            .time-box { font-size: 18px; padding: 12px; }
+            h1 { font-size: 32px; }
+            .panel {
+                justify-content: center;
+                gap: 15px;
+            }
         }
     </style>
 </head>
@@ -89,32 +143,80 @@
     <div class="container">
         <h1>Horarios Operación</h1>
         <div class="panel">
-            <div class="time-box" id="San-Jose-del-Cabo">🇲🇽 San José del Cabo <span class="time"></span></div>
-            <div class="time-box" id="Puerto-Vallarta">🇲🇽 Puerto Vallarta <span class="time"></span></div>
-            <div class="time-box" id="Punta-Cana">🇩🇴 Punta Cana <span class="time"></span></div>
-            <div class="time-box highlight" id="Cancun">🇲🇽 Cancún (CUN) <span class="time"></span></div>
+            <!-- San José del Cabo -->
+            <div class="time-box" id="San-Jose-del-Cabo">
+                <div class="flag">🇲🇽</div>
+                <h2>San José del Cabo</h2>
+                <a href="https://time.is/San_José_del_Cabo" rel="nofollow">SJD</a>
+                <span id="time_San_Jose_del_Cabo" class="time"></span>
+                <div class="sun-info" id="sun-San-Jose-del-Cabo"></div>
+            </div>
+
+            <!-- Puerto Vallarta -->
+            <div class="time-box" id="Puerto-Vallarta">
+                <div class="flag">🇲🇽</div>
+                <h2>Puerto Vallarta</h2>
+                <a href="https://time.is/Puerto_Vallarta" rel="nofollow">PVR</a>
+                <span id="time_Puerto_Vallarta" class="time"></span>
+                <div class="sun-info" id="sun-Puerto-Vallarta"></div>
+            </div>
+
+            <!-- Punta Cana -->
+            <div class="time-box" id="Punta-Cana">
+                <div class="flag">🇩🇴</div>
+                <h2>Punta Cana</h2>
+                <a href="https://time.is/Punta_Cana" rel="nofollow">PUJ</a>
+                <span id="time_Punta_Cana" class="time"></span>
+                <div class="sun-info" id="sun-Punta-Cana"></div>
+            </div>
+
+            <!-- Cancún -->
+            <div class="time-box" id="Cancun">
+                <div class="flag">🇲🇽</div>
+                <h2>Cancún</h2>
+                <a href="https://time.is/Cancún" rel="nofollow">CUN</a>
+                <span id="time_Cancun" class="time"></span>
+                <div class="sun-info" id="sun-Cancun"></div>
+            </div>
         </div>
     </div>
 
+    <script src="//widget.time.is/es.js"></script>
     <script>
-        const locations = {
-            'San-Jose-del-Cabo': 'America/Mazatlan',
-            'Puerto-Vallarta': 'America/Mexico_City',
-            'Punta-Cana': 'America/Santo_Domingo',
-            'Cancun': 'America/Cancun'
-        };
-
-        function updateTime() {
-            Object.keys(locations).forEach(id => {
-                const timeZone = locations[id];
-                const timeElement = document.getElementById(id).querySelector('.time');
-                const date = new Date().toLocaleTimeString('es-MX', { timeZone, hour: '2-digit', minute: '2-digit', hour12: false });
-                timeElement.textContent = date;
-            });
-        }
-
-        setInterval(updateTime, 1000);
-        updateTime();
+        time_is_widget.init({
+            time_San_Jose_del_Cabo: {
+                id: "San_José_del_Cabo_z155",
+                template: "TIME<br>DATE<br>SUN",
+                time_format: "hours:minutes",
+                date_format: "dayname daynum/monthnum/yy",
+                sun_format: "Salida del Sol: srhour:srminute Puesta del Sol: sshour:ssminute<br>Duración del Día: dlhoursh dlminutesm",
+                coords: "23.0540600,-109.7036700"
+            },
+            time_Puerto_Vallarta: {
+                id: "Puerto_Vallarta_z159",
+                template: "TIME<br>DATE<br>SUN",
+                time_format: "hours:minutes",
+                date_format: "dayname daynum/monthnum/yy",
+                sun_format: "Salida del Sol: srhour:srminute Puesta del Sol: sshour:ssminute<br>Duración del Día: dlhoursh dlminutesm",
+                coords: "20.6170000,-105.2301800"
+            },
+            time_Punta_Cana: {
+                id: "Punta_Cana_z17a",
+                template: "TIME<br>DATE<br>SUN",
+                time_format: "hours:minutes",
+                date_format: "dayname daynum/monthnum/yy",
+                sun_format: "Salida del Sol: srhour:srminute Puesta del Sol: sshour:ssminute<br>Duración del Día: dlhoursh dlminutesm",
+                coords: "18.5818200,-68.4043100"
+            },
+            time_Cancun: {
+                id: "Cancún_z11f",
+                template: "TIME<br>DATE<br>SUN",
+                time_format: "hours:minutes",
+                date_format: "dayname daynum/monthnum/yy",
+                sun_format: "Salida del Sol: srhour:srminute Puesta del Sol: sshour:ssminute<br>Duración del Día: dlhoursh dlminutesm",
+                coords: "21.1742900,-86.8465600"
+            }
+        });
     </script>
 </body>
 </html>
