--- a/index.html
+++ b/index.html
@@ -3,247 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Customer Service</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@2.4.0/dist/lottie-player.js" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
-            overflow-y: auto;
-            overflow-x: hidden;
-            padding-top: 30px;
-            background-image: url('https://www.transparenttextures.com/patterns/dark-matter.png');
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            text-align: center;
-            padding: 20px;
-        }
-
-        h1 {
-            font-size: 42px;
-            font-weight: 600;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            background: linear-gradient(90deg, #03a9f4, #00e676);
-            -webkit-background-clip: text;
-            color: transparent;
-            text-shadow: 0 0 20px rgba(3, 169, 244, 0.5);
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .panel {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            gap: 15px;
-            padding: 20px;
-            animation: slideIn 1s ease-in-out;
-        }
-
-        @keyframes slideIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .time-box {
-            background: #222;
-            border-radius: 15px;
-            padding: 15px;
-            width: 220px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease, filter 0.3s ease-in-out;
-            position: relative;
-            overflow: hidden;
-            cursor: pointer;
-            transform: scale(1);
-            filter: brightness(1);
-        }
-
-        .time-box:hover {
-            transform: scale(1.1);
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
-            filter: brightness(1.2);
-        }
-
-        .time-box::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.3);
-            border-radius: 15px;
-            z-index: -1;
-        }
-
-        .time-box .flag {
-            font-size: 40px;
-        }
-
-        .time-box h2 {
-            font-size: 22px;
-            margin: 10px 0;
-            text-transform: uppercase;
-        }
-
-        .time-box a {
-            font-size: 18px;
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s;
-        }
-
-        .time-box a:hover {
-            color: #03a9f4;
-        }
-
-        .time-box .time {
-            font-size: 32px;
-            font-weight: 700;
-            margin-top: 15px;
-            letter-spacing: 1px;
-        }
-
-        /* Colores específicos por zona */
-        #San-Jose-del-Cabo {
-            background: linear-gradient(90deg, #f44336, #ff9800);
-        }
-
-        #Puerto-Vallarta {
-            background: linear-gradient(90deg, #3f51b5, #2196f3);
-        }
-
-        #Punta-Cana {
-            background: linear-gradient(90deg, #4caf50, #8bc34a);
-        }
-
-        #Cancun {
-            background: linear-gradient(90deg, #00bcd4, #009688);
-        }
-
-        @media (max-width: 768px) {
-            h1 { font-size: 32px; }
-            .panel {
-                justify-content: center;
-                gap: 15px;
-            }
-        }
-    </style>
+    <title>Time Interface</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;900&display=swap" rel="stylesheet">
+    <script src="//widget.time.is/es.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="quantum-particles"></div>
+    <div class="interactive-cursor"></div>
+    
     <div class="container">
-        <h1 class="animate__animated animate__fadeInUp">Horarios Operación</h1>
+        <h1>Horarios de Operacíon</h1>
         <div class="panel">
             <!-- San José del Cabo -->
-            <div class="time-box" id="San-Jose-del-Cabo" onmouseover="playHoverSound()" onclick="playClickSound('sound1')">
+            <div class="time-box" id="San-Jose-del-Cabo">
                 <div class="flag">🇲🇽</div>
                 <h2>San José del Cabo</h2>
-                <a href="https://time.is/San_José_del_Cabo" rel="nofollow" onclick="playClickSound('sound1')">SJD</a>
+                <a href="https://time.is/San_José_del_Cabo" rel="nofollow">SJD</a>
                 <span id="time_San_Jose_del_Cabo" class="time">00:00</span>
             </div>
 
             <!-- Puerto Vallarta -->
-            <div class="time-box" id="Puerto-Vallarta" onmouseover="playHoverSound()" onclick="playClickSound('sound2')">
+            <div class="time-box" id="Puerto-Vallarta">
                 <div class="flag">🇲🇽</div>
                 <h2>Puerto Vallarta</h2>
-                <a href="https://time.is/Puerto_Vallarta" rel="nofollow" onclick="playClickSound('sound2')">PVR</a>
+                <a href="https://time.is/Puerto_Vallarta" rel="nofollow">PVR</a>
                 <span id="time_Puerto_Vallarta" class="time">00:00</span>
             </div>
 
             <!-- Punta Cana -->
-            <div class="time-box" id="Punta-Cana" onmouseover="playHoverSound()" onclick="playClickSound('sound3')">
+            <div class="time-box" id="Punta-Cana">
                 <div class="flag">🇩🇴</div>
                 <h2>Punta Cana</h2>
-                <a href="https://time.is/Punta_Cana" rel="nofollow" onclick="playClickSound('sound3')">PUJ</a>
+                <a href="https://time.is/Punta_Cana" rel="nofollow">PUJ</a>
                 <span id="time_Punta_Cana" class="time">00:00</span>
             </div>
 
             <!-- Cancún -->
-            <div class="time-box" id="Cancun" onmouseover="playHoverSound()" onclick="playClickSound('sound4')">
+            <div class="time-box" id="Cancun">
                 <div class="flag">🇲🇽</div>
                 <h2>Cancún</h2>
-                <a href="https://time.is/Cancún" rel="nofollow" onclick="playClickSound('sound4')">CUN</a>
+                <a href="https://time.is/Cancún" rel="nofollow">CUN</a>
                 <span id="time_Cancun" class="time">00:00</span>
             </div>
         </div>
     </div>
 
-    <script src="//widget.time.is/es.js"></script>
-    <script>
-        // Sounds
-        var hoverSound = new Audio('https://www.soundjay.com/button/beep-06.wav');
-        var clickSound1 = new Audio('https://www.soundjay.com/button/beep-07.wav');
-        var clickSound2 = new Audio('https://www.soundjay.com/button/beep-08b.wav');
-        var clickSound3 = new Audio('https://www.soundjay.com/button/beep-10.wav');
-        var clickSound4 = new Audio('https://www.soundjay.com/button/beep-09.wav');
-
-        // Play hover sound
-        function playHoverSound() {
-            hoverSound.play();
-        }
-
-        // Play click sound based on location
-        function playClickSound(sound) {
-            if (sound === 'sound1') {
-                clickSound1.play();
-            } else if (sound === 'sound2') {
-                clickSound2.play();
-            } else if (sound === 'sound3') {
-                clickSound3.play();
-            } else if (sound === 'sound4') {
-                clickSound4.play();
-            }
-        }
-
-        time_is_widget.init({
-            time_San_Jose_del_Cabo: {
-                id: "San_José_del_Cabo_z155",
-                template: "TIME<br>DATE",
-                time_format: "hours:minutes",
-                date_format: "dayname daynum/monthnum/yy",
-                coords: "23.0540600,-109.7036700"
-            },
-            time_Puerto_Vallarta: {
-                id: "Puerto_Vallarta_z159",
-                template: "TIME<br>DATE",
-                time_format: "hours:minutes",
-                date_format: "dayname daynum/monthnum/yy",
-                coords: "20.6170000,-105.2301800"
-            },
-            time_Punta_Cana: {
-                id: "Punta_Cana_z17a",
-                template: "TIME<br>DATE",
-                time_format: "hours:minutes",
-                date_format: "dayname daynum/monthnum/yy",
-                coords: "18.5818200,-68.4043100"
-            },
-            time_Cancun: {
-                id: "Cancún_z11f",
-                template: "TIME<br>DATE",
-                time_format: "hours:minutes",
-                date_format: "dayname daynum/monthnum/yy",
-                coords: "21.1742900,-86.8465600"
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
