--- a/index.html
+++ b/index.html
@@ -50,5 +50,14 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script>
+    AOS.init({
+        duration: 1200,
+        once: true,
+        mirror: false
+    });
+</script>
 </body>
 </html>
