--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Interface</title>
+    <title>HyperModern Time Interface</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;900&display=swap" rel="stylesheet">
-    <script src="//widget.time.is/es.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +12,7 @@
     <div class="interactive-cursor"></div>
     
     <div class="container">
-        <h1>Horarios de Operacíon</h1>
+        <h1>Control Temporal Global</h1>
         <div class="panel">
             <!-- San José del Cabo -->
             <div class="time-box" id="San-Jose-del-Cabo">
@@ -51,16 +48,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-<script>
-    AOS.init({
-        duration: 1200,
-        once: true,
-        mirror: false
-    });
-</script>
-    <script type="module" src="tu-script-mejorado.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
